finished main body of login and auth flow

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,6 +8,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Nogrammersandroid">
+        <uses-permission android:name="android.permission.INTERNET" />
         <activity android:name=".LoginActivity" />
         <activity
             android:name=".MainActivity"
