--- a/app/build.gradle
+++ b/app/build.gradle
@@ -12,13 +12,14 @@ android {
         targetSdkVersion 29
         versionCode 1
         versionName "1.0"
+        multiDexEnabled true
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
 
     buildTypes {
         release {
-            minifyEnabled false
+            minifyEnabled true
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
@@ -62,4 +63,6 @@ dependencies {
     implementation 'androidx.activity:activity-ktx:1.2.0-alpha08'
     implementation 'androidx.fragment:fragment:1.3.0-alpha08'
     implementation 'com.google.firebase:firebase-storage-ktx'
+    implementation 'com.google.firebase:firebase-auth-ktx'
+    implementation 'com.android.support:multidex:1.0.3'
 }
