--- a/app/build.gradle
+++ b/app/build.gradle
@@ -61,6 +61,7 @@ dependencies {
     implementation "androidx.fragment:fragment-ktx:$fragment_version"
     implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.2.0'
     implementation "androidx.viewpager2:viewpager2:1.0.0"
+    implementation 'com.android.volley:volley:1.1.1'
     implementation 'androidx.activity:activity-ktx:1.2.0-alpha08'
     implementation 'androidx.fragment:fragment:1.3.0-alpha08'
     implementation 'com.google.firebase:firebase-storage-ktx'
