--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,22 +1,27 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.nogrammers_android">
+        package="com.example.nogrammers_android">
+
     <uses-permission android:name="android.permission.INTERNET" />
-    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+
     <application
-        android:icon="@mipmap/ic_launcher"
-        android:label="@string/hey_duncan"
-        android:roundIcon="@mipmap/ic_launcher_round"
-        android:supportsRtl="true"
-        android:theme="@style/Theme.Nogrammersandroid">
-        <activity android:name=".login.LoginActivity" />
+            android:icon="@mipmap/ic_launcher"
+            android:label="@string/hey_duncan"
+            android:roundIcon="@mipmap/ic_launcher_round"
+            android:supportsRtl="true"
+            android:theme="@style/Theme.Nogrammersandroid">
         <activity
-            android:name=".MainActivity"
-            android:theme="@style/Theme.Nogrammersandroid"
-            android:windowSoftInputMode="adjustPan" />
+                android:name=".login.LoginActivity"
+                 />
         <activity
-            android:name=".SplashScreen"
-            android:theme="@style/Theme.AppCompat.Light.NoActionBar">
+                android:name=".MainActivity"
+
+                android:windowSoftInputMode="adjustPan" />
+        <activity
+                android:name=".SplashScreen"
+                >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
